Try fixing squishing

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ a:hover {
 }
 
 .main {
-    width: 70%;
+    /*width: 70%;*/
     margin: 2em auto 2em;
     font-size: 1.25em;
     line-height: 1.4em;
